#95 Added Spark Infrastructure V2 integrations
Signed-off-by: Peter McClonski <mcclonski_peter@bah.com>

--- a/extensions/extensions-helm/extensions-helm-spark-infrastructure/aissemble-spark-history-chart/pom.xml
+++ b/extensions/extensions-helm/extensions-helm-spark-infrastructure/aissemble-spark-history-chart/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.boozallen.aissemble</groupId>
-        <artifactId>extensions-helm</artifactId>
+        <artifactId>extensions-helm-spark-infrastructure</artifactId>
         <version>1.7.0-SNAPSHOT</version>
     </parent>
 
