--- a/test/src/test/resources/docker/Dockerfile
+++ b/test/src/test/resources/docker/Dockerfile
@@ -1,4 +1,4 @@
 # Test docker image
-FROM ghcr.io/boozallen/aissemble-quarkus:1.7.0-SNAPSHOT
+FROM ghcr.io/boozallen/aissemble-quarkus:1.7.0
 
 COPY hello-world/ /deployments/
