--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,12 +22,14 @@ on:
 jobs:
   build:
 
-    runs-on: aissemble
+    runs-on: arc-runner-set-aissemble
 
     steps:
       - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.buildBranch }}
+      - name: install curl
+        run: sudo apt-get install -y curl
       - name: Load cached Poetry installation
         id: cached-poetry
         uses: actions/cache@v4
@@ -57,6 +59,14 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+      - name: Install Docker
+        run: |
+          sudo apt-get -y update
+          sudo apt-get -y install apt-transport-https ca-certificates gnupg lsb-release
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get -y update
+          sudo apt-get -y install docker-ce docker-ce-cli containerd.io
       - name: Docker info
         run: docker info
       - name: Build aiSSEMBLE
