--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,16 @@ jobs:
           ref: ${{ inputs.buildBranch }}
       - name: install curl
         run: sudo apt-get install -y curl
+      - name: install PyEnv
+        run: |
+          curl https://pyenv.run | bash
+          PYENV_ROOT="$HOME/.pyenv"
+          export PATH="$HOME/.pyenv/bin;$PATH"
+          eval "$(pyenv init -)"
+      - name: Install Python # use direct install rather than pyenv for CI for large speed improvement
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11.4'
       - name: Load cached Poetry installation
         id: cached-poetry
         uses: actions/cache@v4
@@ -54,25 +64,18 @@ jobs:
             maven-build-cache-
       - name: Install Poetry
         uses: snok/install-poetry@v1
+      - name: Install Helm
+        run: |
+          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+          chmod 700 get_helm.sh
+          ./get_helm.sh
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'temurin'
-      - name: Install Docker
-        run: |
-          sudo apt-get -y update
-          sudo apt-get -y install apt-transport-https ca-certificates gnupg lsb-release
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          sudo apt-get -y update
-          sudo apt-get -y install docker-ce docker-ce-cli containerd.io
-      - name: Docker info
-        run: docker info
       - name: Build aiSSEMBLE
         run: |
-          echo "$HOME/.pyenv/bin;/home/ubuntu/.local/bin" >> $GITHUB_PATH
-          eval "$(pyenv init -)"
           ./mvnw -B clean install --file pom.xml -Pci,integration-test
       #NB: The following two explicit cache saves are necessary to ensure caches are saved on build failure,
       # until https://github.com/actions/cache/issues/1315 is resolved
