--- a/foundation/foundation-configuration-store/pom.xml
+++ b/foundation/foundation-configuration-store/pom.xml
@@ -90,6 +90,11 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>com.boozallen.aissemble</groupId>
+            <artifactId>foundation-core-java</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
             <version>${version.snakeyaml}</version>
